# cdr_schemas

./: .flake8  .gitignore  README.md  pyproject.toml
cdr_schemas/: events.py  georeference.py
dev/: script.py
scripts/: format.sh  lint.sh
